--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 jdk:
   - oraclejdk8
 script:
-  - mvn clean test org.jacoco:jacoco-maven-plugin:prepare-agent package javadoc:javadoc sonar:sonar
+  - mvn clean test org.jacoco:jacoco-maven-plugin:prepare-agent package javadoc:javadoc sonarcloud:sonarcloud
 cache:
   directories:
     - '$HOME/.m2/repository'
