--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 jdk:
   - oraclejdk8      
 script:
+# the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+#JaCoCo is used to have code coverage, the agent has to be activated
   - mvn clean test org.jacoco:jacoco-maven-plugin:prepare-agent package javadoc:javadoc sonar:sonar
 cache:
   directories:
