--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 dist: trusty
 install: true
 addons:
-  sonarqube:
+  sonarcloud:
     organization: "dcastell"
     token:
       secure: "760ffa5044f9ea9dfeec724b948246b6216482ce"
