--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
   sonarcloud:
     organization: "dcastell"
     token:
-      secure: "760ffa5044f9ea9dfeec724b948246b6216482ce"
+      secure: ""
 jdk:
   - oraclejdk8
 script:
