--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 sudo: false
 dist: trusty
 install: true
+travis encrypt abcdef0123456789
 addons:
   sonarcloud:
     organization: "dcastell"
