--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <properties>
+  <sonar.organization>dagoull-github</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
   <dependencies>
   	<dependency>
