--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,11 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   <sonar.organization>dagoull-github</sonar.organization>
-   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     <sonar.organization>dagoull-github</sonar.organization>
+     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+     <maven.compiler.source>1.6</maven.compiler.source>
+     <maven.compiler.target>1.6</maven.compiler.target>
 </properties>
 
   <dependencies>
