--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,16 @@
      <maven.compiler.source>1.6</maven.compiler.source>
      <maven.compiler.target>1.6</maven.compiler.target>
 </properties>
-
+  
+   <reporting>
+         <plugins>
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.0</version>
+         </plugin>
+      </plugins>
+   </reporting>  
   <dependencies>
   	<dependency>
   		<groupId>junit</groupId>
