--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
      <sonar.host.url>https://sonarcloud.io</sonar.host.url>
      <maven.compiler.source>1.6</maven.compiler.source>
      <maven.compiler.target>1.6</maven.compiler.target>
+    
+     <!-- https://www.baeldung.com/sonarqube-jacoco-code-coverage -->
+    <!-- JaCoCo Properties -->
+    <jacoco.version>0.8.6</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    <sonar.language>java</sonar.language>
+
 </properties>
   
    <reporting>
@@ -25,6 +34,28 @@
             <artifactId>cobertura-maven-plugin</artifactId>
             <version>2.0</version>
          </plugin>
+           
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+          <executions>
+              <execution>
+                  <id>jacoco-initialize</id>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+              </execution>
+              <execution>
+                  <id>jacoco-site</id>
+                  <phase>package</phase>
+                  <goals>
+                      <goal>report</goal>
+                  </goals>
+              </execution>
+          </executions>
+        </plugin>
+           
       </plugins>
    </reporting>  
   <dependencies>
@@ -33,5 +64,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.13.1</version>
   	</dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId> 
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.6</version>
+  </dependency>
   </dependencies>
 </project>
