--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,19 @@
+executors:
+  j13:
+    docker:
+      - image: 'cimg/openjdk:13.0'
+  j15:
+    docker:
+      - image: 'cimg/openjdk:15.0'
 orbs:
   maven: circleci/maven@1.1
 version: 2.1
 workflows:
   maven_test:
     jobs:
-      - maven/test
+      - maven/test:
+          matrix:
+            parameters:
+              executor:
+                - j13
+                - j15
