--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ orbs:
 workflows:
   maven_test:
     jobs:
-      - maven/test: # checkout, build, test, and upload test results
+      - maven/test
