--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,18 @@
+version: 2
+jobs:
+build:
+  working_directory: /tmp
+  steps:
+    - run:
+        name: Creating Dummy Artifacts
+        command: |
+          echo "my artifact file" > /tmp/art-1;
+          mkdir /tmp/artifacts;
+          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
 
-version: 2.1
+    - store_artifacts:
+        path: /tmp/art-1
+        destination: artifact-file
 
-orbs:
-  maven: circleci/maven@1.0.3
-
-workflows:
-  maven_test:
-    jobs:
-      - maven/test
+    - store_artifacts:
+        path: /tmp/artifacts
