--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,7 @@
-version: 2
-jobs:
-  build:
-  working_directory: /tmp
-  steps:
-    - run:
-        name: Creating Dummy Artifacts
-        command: |
-          echo "my artifact file" > /tmp/art-1;
-          mkdir /tmp/artifacts;
-          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
-
-    - store_artifacts:
-        path: /tmp/art-1
-        destination: artifact-file
-
-    - store_artifacts:
-        path: /tmp/artifacts
+version: 2.1
+orbs:
+  maven: circleci/maven@x.y
+workflows:
+  maven_test:
+    jobs:
+      - maven/test
