--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,13 @@
-version: 2.1
-orbs:
-  maven: circleci/maven@1.0
-workflows:
-  maven_test:
-    jobs:
-      - maven/test
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:11.0-stretch-node-browsers-legacy
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    steps:
+      - checkout
+      - run : mvn test
       - store_artifacts:
           path:  target
