--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,9 @@
 version: '2.1'
 orbs: 
-  java: mediarails/java@0.1.17
+  maven: circleci/maven@1.2.0
+version: 2.1
+workflows:
+  maven_test:
+    jobs:
+      - maven/test:
+          command: '-X verify'
