--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ executors:
     docker:
       - image: 'cimg/openjdk:15.0'
 workflows:
-  maven_test:
+  maven_build:
     jobs:
-      - maven/test:
+      - maven/compiler:
           matrix:
             parameters:
               executor:
