--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ executors:
     docker:
       - image: 'cimg/openjdk:15.0'
 workflows:
-  maven_build:
+  maven_test:
     jobs:
-      - maven/compiler:
+      - maven/test:
           matrix:
             parameters:
               executor:
