--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      run: mvn --batch-mode --update-snapshots verify
+      run: mkdir staging && cp target/*.jar staging
+      uses: actions/upload-artifact@v2
+      with:
+      name: Package
+      path: staging
